--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,9 @@ body{
     font-family: 'Roboto', sans-serif;
     font-size: 30px;
     font-weight: bold;
+    background-color: #CCC632;
+    width: 100%;
+    padding-left: 23px;
 }
 
 .rectangleButton.zero {
